--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           <span class="time-label">SECONDS</span>
         </div>
       </div>
+
+      <div class="action-container">
+        <a href="business-plan.html" class="btn-primary">사업계획서 보러가기</a>
+      </div>
     </div>
   </div>
 
